Rework the code so that Maven downloads the archetype code

--- a/archetype-builder/pom.xml
+++ b/archetype-builder/pom.xml
@@ -30,6 +30,10 @@
   <artifactId>archetype-builder</artifactId>
   <name>Fabric8 :: Archetype Builder</name>
 
+  <properties>
+    <mode>online</mode>
+  </properties>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -160,10 +164,232 @@
               <key>repo.tag</key>
               <value>${quickstart.git.version}</value>
             </systemProperty>
+            <systemProperty>
+              <key>mode</key>
+              <value>${mode}</value>
+            </systemProperty>
           </systemProperties>
         </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>offline</id>
+      <properties>
+        <mode>offline</mode>
+        <quickstarts.repo>https://github.com</quickstarts.repo>
+        <version.karaf-camel-amq>master</version.karaf-camel-amq>
+        <version.karaf-camel-log>master</version.karaf-camel-log>
+      </properties>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-scm-plugin</artifactId>
+            <version>1.11.1</version>
+            <executions>
+              <execution>
+                <id>karaf-camel-amq</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/karaf-camel-amq.git</connectionUrl>
+                  <scmVersion>${version.karaf-camel-amq}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/karaf-camel-amq</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>karaf-camel-log</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/karaf-camel-log.git</connectionUrl>
+                  <scmVersion>${version.karaf-camel-log}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/karaf-camel-log</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>karaf-camel-rest-sql</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/karaf-camel-rest-sql.git</connectionUrl>
+                  <scmVersion>${version.karaf-camel-rest-sql}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/karaf-camel-rest-sql</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>karaf-cxf-rest</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/karaf-cxf-rest.git</connectionUrl>
+                  <scmVersion>${version.karaf-cxf-rest}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/karaf-cxf-rest</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-camel</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-camel.git</connectionUrl>
+                  <scmVersion>${version.spring-boot-camel}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-camel</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-camel-amq</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-camel-amq.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-camel-amq}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-camel-amq</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-camel-config</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-camel-config.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-camel-config}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-camel-config</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-camel-drools</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-camel-drools.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-camel-drools}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-camel-drools</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-camel-infinispan</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-camel-infinispan.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-camel-infinispan}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-camel-infinispan
+                  </checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-camel-rest-sql</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-camel-rest-sql.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-camel-rest-sql}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-camel-rest-sql</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-camel-teiid</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-camel-teiid.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-camel-teiid}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-camel-teiid</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-camel-xml</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-camel-xml.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-camel-xml}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-camel-xml</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-cxf-jaxrs</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-cxf-jaxrs.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-cxf-jaxrs}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-cxf-jaxrs</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>spring-boot-cxf-jaxws</id>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <connectionUrl>scm:git:${quickstarts.repo}/fabric8-quickstarts/spring-boot-cxf-jaxws.git
+                  </connectionUrl>
+                  <scmVersion>${version.spring-boot-cxf-jaxws}</scmVersion>
+                  <scmVersionType>tag</scmVersionType>
+                  <checkoutDirectory>${project.basedir}/../git-clones/spring-boot-cxf-jaxws</checkoutDirectory>
+                </configuration>
+                <goals>
+                  <goal>checkout</goal>
+                </goals>
+              </execution>
+
+
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
